left: fix background color for new group button

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -878,6 +878,8 @@
                 /// New chat.
                 ._11p3Q, ._8-yzK { c: 0 0 t }
                 .r7sRK { c: ac 0 t }
+                /// New group button.
+                /._3p0T6 { c: 0 0 ac }
                 /// Remove borders.
                 ._2DxRd, ._2WP9Q { border: none }
             }
