modals: add margins to 'allow notifications' modal

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -559,6 +559,8 @@
         ._1wt6r { c: cm }
         ._3hnO5 { c: 0 ac }
         ._1T8rb { c: ac 0 t }
+        /// Left -> Turn on desktop notifications.
+        .NWyjc.AZ3xD { margin: 16px }
     }
 
     // Global -> Status.
