left: fix colors for blocked contacts area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -909,6 +909,10 @@
                     c: 0 0 t;
                 }
             }
+            /// Blocked contacts.
+            ._2TLLH { c: 0 t }
+            ._13U-5, ._3dwyT { c: cm }
+            ._1i7uJ { c: 0 0 bd }
             /// Version info.
             ._357v7 { c: fg }
         }
