global: tweak colors for group admin badge

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -437,9 +437,8 @@
     }
 
     // Global -> Badges.
-    ._2WwbV {
-        c: cm bd bg;
-    }
+    ._2WwbV { c: cm bd bg }
+    .FPZFa { c: green green bg }
 
     /// Global -> Modals.
     .overlay {
