chat: fix default bg flash for selected messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1066,7 +1066,7 @@
                 c: 0 0 t;
                 [class *= 'message-'] { position: relative }
                 /// Selected messages.
-                .qTFAl {
+                /.qTFAl {
                     /// Pseudo-background.
                     &::before {
                         content: '';
