modals: fix colors for group invite modal

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -548,6 +548,14 @@
             ._1VI-m { c: fg }
             [role = 'button'] { c: 0 0 ac }
         }
+        /// View group invite.
+        ._2Vo52 {
+            /// Header.
+            .XOIaT { c: 0 0 hl }
+            /// Text.
+            ._1WSDe { c: fg }
+            ._3WFBR, .vJCph, ._2oG62 { c: cm }
+        }
         /// Send/view contacts.
         .WOXAS, ._1v8mQ {
             c: 0 0 t;
