chat: fix colors for read more/join group buttons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1123,6 +1123,13 @@
                 c: cm;
                 [data-icon] path { fill: cm }
             }
+            /// 'Read more' button.
+            ._1Jc9f { c: ac }
+            /// 'Join group' button.
+            ._1PENu {
+                c: 0 bg;
+                [role = 'button'] { c: ac }
+            }
         }
         /// Feat -> Blur img/videos.
         if ( chat_b_img == 1 ) {
