chat: fix nickname text color in reply section

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1462,6 +1462,8 @@
         ._1ebw2 {
             c: 0 0 bg;
             box-shadow: bsh, inset 0 1px bd i;
+            /// Nickname.
+            /._1F9Ap:not(#z) { c: cm }
             /// Content.
             > div:first-child:not(#z) {
                 margin-bottom: 5px i;
