chat: tweak background color for system messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1049,7 +1049,7 @@
             letter-spacing: 0;
             font-weight: 600;
             text-shadow: none;
-            c: fg 0 hl;
+            c: fg 0 bd;
             box-shadow: inset 0 -3px sh;
             &.S-bQb { c: orange }
             &:not(.tail) { c: green }
