modals: fix color of 'tel' field in user details

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -560,7 +560,7 @@
         .WOXAS, ._1v8mQ {
             c: 0 0 t;
             box-shadow: 0 1px bd i ;
-            .fwByR { c: ac }
+            /.fwByR { c: ac }
         }
         /// Settings -> Help.
         ._1wt6r { c: cm }
