chat: fix styles for multiple sent/received contacts

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1184,6 +1184,9 @@
                 &:hover { opacity: 0.8 }
             }
         }
+        /// Multiple contacts.
+        .L4M2f, ._1d0W1 { c: 0 bg t }
+        ._3ZVco { c: fg }
     }
 
     // Main -> Chat message bubbles.
