landing: tweak QR's border in idle state

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -243,6 +243,11 @@
                     outline: 4px solid white;
                     box-shadow: 0 0 0 4px white;
                     [role='button'] { c: white 0 ac }
+                    /// Change QR's white border.
+                    &._2VkjG {
+                        outline: 4px solid ac;
+                        box-shadow: 0 0 0 4px ac;
+                    }
                 }
                 /// Video showcase.
                 + ._310T_ {
