global: fix lang value for Vietnamese language

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1513,7 +1513,7 @@
 
     // Fix whitespace for message content/timestamp. @upstream
     html {
-        &[lang = 'vn'], &[lang = 'nl'] {
+        &[lang = 'vi'], &[lang = 'nl'] {
             .EopGb { width: 56px }
             ._2COY9 { width: 92px }
         }
