misc: fix minor text colors

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -894,6 +894,8 @@
                     ._2DxRd, ._2WP9Q { c: 0 t }
                 }
             }
+            /// New group creation.
+            /._1wt6r { c: cm }
             /// New chat.
             ._1c8mz {
                 /// New chat.
@@ -1449,6 +1451,8 @@
                         input { c: fg }
                     }
                 }
+                /// Header colors.
+                ._2lKjK { c: cm }
                 /// Gif -> Preloader.
                 ._2x9yi { c: 0 0 hl }
                 /// Stickers -> Retry button.
