right: reset right padding for mute/starred msg

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -949,6 +949,7 @@
         /// Buttons.
         ._3_-Si {
             padding: 0 15px;
+            > ._2x2XP { padding-right: 0 }
             > div { c: 0 bd }
             span { c: fg }
         }
