chat: tweak box-shadow for system messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1060,8 +1060,8 @@
             letter-spacing: 0;
             font-weight: 600;
             text-shadow: none;
-            c: fg 0 bd;
-            box-shadow: inset 0 -3px sh;
+            c: fg 0 hl;
+            box-shadow: inner, inset 0 -3px bd;
             &.S-bQb { c: orange }
             &:not(.tail) { c: green }
         }
