chat: fix border-radius for attach dropdown menu

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -717,6 +717,7 @@
             &._1fRWV {
                 top: -10px;
                 padding: 10px;
+                rad: 0 0 r r;
                 .Ijb1Q::after { box-shadow: 0 4px 8px sh }
             }
             /// Emojis -> Race selection.
