global: fix border color of input elements

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -856,7 +856,8 @@
                 box-shadow: none;
                 ._3he1q { c: ac }
                 ._3K9Sw { c: 0 t }
-                ._5UNoc ._3hnO5 { c: 0 ac }
+                /// Input area border.
+                /._5UNoc ._3hnO5 { c: 0 ac }
             }
             /// Settings -> User info section.
             /._2UaNq {
