global: tweak minor things for media selection

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -623,12 +623,11 @@
 
     // Global -> Media selection.
     ._2n0jo {
-        c: 0 bd bg;
+        c: 0 bd hl;
         /// Item reset.
         ._1LdNS {
             &.cJP5q {
                 border: none i;
-                transform: scale(1) i;
                 outline: 4px solid ac;
             }
             &:hover:not(.cJP5q):not(#spec) { outline: 4px solid ac i }
