global: fix unread indicators in archived pane

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -808,7 +808,7 @@
                     > div:last-child { c: cm }
                 }
                 /// Unread indicators.
-                .P6z4j { c: white 0 ac }
+                /.P6z4j { c: white 0 ac }
             }
         }
         /// Search contacts/messages.
