--- a/wa.user.styl
+++ b/wa.user.styl
@@ -332,6 +332,9 @@
         svg[width = '20'][height = '20'] {
             circle { stroke: green }
         }
+        svg[width = '34'][height = '34'] {
+            circle { stroke: cm }
+        }
 
         /// Panes -> Change avatars.
         ._1JS2G { c: fg 0 #66666666 }
