global: reduce repeating of various bits of code

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -932,7 +932,7 @@
             }
             /// Blocked contacts.
             ._2TLLH { c: 0 t }
-            ._13U-5, ._3dwyT { c: cm }
+            ._13U-5, /._3dwyT { c: cm }
             ._1i7uJ { c: 0 0 bd }
             /// Version info.
             ._357v7 { c: fg }
@@ -1139,9 +1139,9 @@
                 [data-icon] path { fill: cm }
             }
             /// 'Read more' button.
-            ._1Jc9f { c: ac }
+            /._1Jc9f { c: ac }
             /// 'Join group' button.
-            ._1PENu {
+            /._1PENu {
                 c: 0 bg;
                 [role = 'button'] { c: ac }
             }
