modals: fix 'add screenshots' field background

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -515,6 +515,7 @@
             c: 0 0 bg;
             box-shadow: 0 4px 8px 2px sh;
             ._13HPh { c: fg }
+            ._2VDPW { c: 0 0 hl }
             /// 'Forward message' popout.
             ._1KDYa {
                 c: 0 0 t;
