--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1496,6 +1496,11 @@
                 c: 0 0 hl;
                 div[role] { c: 0 0 hl }
                 /.quoted-mention { c: cm }
+                /// Add border around wrapper.
+                > div > div {
+                    rad: 7.5px;
+                    box-shadow: inset 0 0 0 1px bd;
+                }
             }
             /// Close button.
             div:last-child {
