global: add top border for items within panes

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -877,6 +877,7 @@
             ._26JG5 {
                 border-bottom: 1px solid bd;
                 c: 0 0 t;
+                box-shadow: 0 -1px bd;
                 &:hover { c: 0 0 hl }
                 &::before { content: none }
                 > div:last-child { c: 0 t }
