chat: increase whitespace around reply content

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1493,7 +1493,7 @@
             /._1F9Ap:not(#z) { c: cm }
             /// Content.
             > div:first-child:not(#z) {
-                margin-bottom: 5px i;
+                margin: 4px 0 8px 66px;
                 c: 0 0 hl;
                 div[role] { c: 0 0 hl }
                 /.quoted-mention { c: cm }
