chat: make styles for multiple contacts global

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1202,8 +1202,8 @@
             }
         }
         /// Multiple contacts.
-        .L4M2f, ._1d0W1 { c: 0 bg t }
-        ._3ZVco { c: fg }
+        /.L4M2f, /._1d0W1 { c: 0 bg t }
+        /._3ZVco { c: fg }
     }
 
     // Main -> Chat message bubbles.
