--- a/wa.user.styl
+++ b/wa.user.styl
@@ -369,12 +369,14 @@
                 rad: r;
                 box-shadow: bsh;
                 /// Feat -> Custom max-width.
-                width: var(--app-width);
+                width: calc(100% - 38px);
+                max-width: var(--app-width);
                 /// Feat -> Fullscreen mode.
                 if ( fullscreen == 1 ) {
                     rad: 0;
                     top: unset;
                     width: 100%;
+                    max-width: 100%;
                     height: 100%;
                 }
             }
