right: fix another section in message info

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -988,7 +988,12 @@
         ._2AJf5 {
             c: 0 0 t;
             span { c: ac }
-         }
+        }
+        /// Message info -> X remaining.
+        ._19xqi {
+            c: 0 0 t;
+            box-shadow: 0 1px bd;
+        }
         /// Read/Delivered section.
         ._2WP9Q { border: none }
         /// Search -> Default message.
