--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1505,7 +1505,7 @@
                 div[role] { c: 0 0 hl }
                 /.quoted-mention { c: cm }
                 /// Add border around wrapper.
-                > div > div {
+                /._1SsXF, ._3LVMN {
                     rad: 7.5px;
                     box-shadow: inset 0 0 0 1px bd;
                 }
