right: fix 'read more' in group descriptions

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1148,7 +1148,7 @@
                 [data-icon] path { fill: cm }
             }
             /// 'Read more' button.
-            /._1Jc9f { c: ac }
+            /._1Jc9f, /._3THW4 { c: ac }
             /// 'Join group' button.
             /._1PENu {
                 c: 0 bg;
