global: fix group invite link color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -338,6 +338,9 @@
 
         /// Panes -> Change avatars.
         ._1JS2G { c: fg 0 #66666666 }
+
+        /// Group invite link.
+        #group-invite-link-anchor { c: ac }
     }
 
     #app > div {
