global: tweak colors of archived chat badge

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -453,7 +453,7 @@
     }
 
     // Global -> Badges.
-    ._2WwbV { c: cm bd bg }
+    ._2WwbV { c: blue blue bg }
     .FPZFa { c: green green bg }
 
     /// Global -> Modals.
