--- a/wa.user.styl
+++ b/wa.user.styl
@@ -670,7 +670,7 @@
         &[data-icon = 'back-blue'] path { v: blue }
         /// Default user/group/broadcasts icons.
         &[data-icon ^= 'default-'] path {
-            &:first-child { fill: bd }
+            &:first-child { fill: bg }
             &:last-child { fill: cm }
         }
         /// Business accounts.
@@ -745,7 +745,7 @@
     #side {
         > header {
             border-bottom: 1px solid bd;
-            c: 0 0 t;
+            c: 0 0 hl;
             /// Avatar background.
             [style *= 'height: 40px'] { c: 0 0 t }
         }
@@ -780,7 +780,7 @@
         /// Search.
         /div[class *= 'ZP8RM'] {
             border-bottom: 1px solid bd;
-            c: 0 0 bg;
+            c: 0 0 hl;
             &._19OGD { c: 0 0 hl }
             &::after { content: none }
             > div { c: cm }
@@ -791,7 +791,7 @@
         }
         /// Contacts.
         #pane-side {
-            c: 0 0 t;
+            c: 0 0 hl;
             /// Items.
             [style *= 'z-index'] > div > div[class] {
                 c: 0 0 t;
@@ -799,7 +799,7 @@
                 /.matched-text:not(#z) { c: ac }
                 /// Active states.
                 &:hover, &._3mMX1 {
-                    c: 0 0 hl;
+                    c: 0 0 bd;
                     box-shadow: inset 0 1px bd, 0 1px bd;
                 }
                 /// Remove borders.
@@ -838,7 +838,7 @@
     // App -> Left -> Profile/Settings.
     .app span > div[style *= 'height: 100%'] {
         > div[class], > span > div[class], > div > div[class] {
-            c: 0 0 bg;
+            c: 0 0 hl;
             > header {
                 height: unset;
                 min-height: unset i;
@@ -871,7 +871,7 @@
             /._2UaNq {
                 c: 0 0 t;
                 &::after { content: none i }
-                &:hover:not(#z):not(#x) { c: 0 0 hl }
+                &:hover:not(#z):not(#x) { c: 0 0 bd }
                 [style *= 'height: 82px'] { c: 0 0 t }
                 ._2WP9Q { border-top: none i }
                 /// Nick/info.
@@ -883,7 +883,7 @@
                 border-bottom: 1px solid bd;
                 c: 0 0 t;
                 box-shadow: 0 -1px bd;
-                &:hover { c: 0 0 hl }
+                &:hover { c: 0 0 bd }
                 &::before { content: none }
                 > div:last-child { c: 0 t }
                 ._6xQdq { c: fg }
@@ -976,12 +976,6 @@
             padding: 0 15px;
             width: auto;
         }
-        /// Right -> Message info reset.
-        &._1KDYa {
-            ._2UaNq:not(#z):not(#x) {
-                &:hover { c: 0 0 t }
-            }
-        }
         /// Message info -> Image.
         ._2rGVQ {
             border-bottom: 1px solid bd;
@@ -1003,8 +997,8 @@
         ._3dwyT { c: cm }
         /// Search -> Items on hover.
         [style]:not(#z):not(#x) > div > ._2UaNq {
-            &._3sA1g:hover, &._3mMX1 {
-                c: 0 0 hl;
+            &._3sA1g:hover, &._3mMX1, &.hover {
+                c: 0 0 bd;
                 box-shadow: 0 0 0 1px bd;
             }
         }
@@ -1057,7 +1051,7 @@
         > header {
             border-right: none;
             border-bottom: 1px solid bd;
-            c: 0 bd bg;
+            c: 0 bd hl;
             &::after { content: none }
             [style *= 'height: 40px'] { c: 0 0 t }
             [title] { c: fg }
@@ -1432,10 +1426,10 @@
         /// Input area.
         > div:first-child {
             border-top: 1px solid bd;
-            c: 0 bd bg;
+            c: 0 bd hl;
             div[style] + div[tabindex] {
                 rad: radius-i;
-                c: 0 bd hl;
+                c: 0 bd bg;
                 [style *= 'visibility'] {
                     c: cm;
                     /// Hide input placeholder.
