right: use borders instead of shadows for sections

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -944,6 +944,8 @@
             /// Version info.
             ._357v7 { c: fg }
         }
+        /// Right -> Replace shadow with borders.
+        ._2LSbZ { box-shadow: 0 -1px bd i }
     }
 
     // App -> Right.
