--- a/wa.user.styl
+++ b/wa.user.styl
@@ -84,9 +84,9 @@
             --accent    : accent;
             --shadow    : shadow;
         } else {
-            --dark      : #272c35;
+            --dark      : #1f232a;
             --darken    : #222730;
-            --darker    : #1f232a;
+            --darker    : #272c35;
             --light     : #e9e9e9;
             --lighter   : #c1c1c1;
             --accent    : accent;
