meta: update UpdateURL field

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -4,7 +4,7 @@
 @namespace    github.com/vednoc/onyx
 @homepageURL  https://github.com/vednoc/onyx
 @supportURL   https://github.com/vednoc/onyx/issues
-@updateURL    https://raw.githubusercontent.com/vednoc/onyx/master/WhatsApp.user.css
+@updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/WhatsApp.user.css
 @version      1.6.2
 @author       vednoc
 @license      MIT
@@ -243,7 +243,7 @@
     --emojiOpacity: /*[[emojiOpacity]]*/;
     --ui-font: /*[[customFonts]]*/ sans-serif;
     --version: "WhatsApp by Mew v1.6.2";
-    --message: "Updated on 18th of November. Addressing GH issues and pull requests. ";
+    --message: "Updated on 1st of December. Repository name will be changed from `onyx` to `dark-whatsapp` exactly in a week, so I'm updating UpdateURL beforehand. Manual reinstall might be required. ";
     --changes: "See the changelog at: https://github.com/vednoc/onyx/releases";
   }
 
