icons: use accent color for seen msg checkmarks

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -689,7 +689,7 @@
         /// Message status.
         &[data-icon *= '-check'] path { v: cm }
         &[data-icon *= '-dblcheck'] path { v: cm }
-        &[data-icon *= '-dblcheck-ack'] path { v: blue }
+        &[data-icon *= '-dblcheck-ack'] path { v: ac }
         &[data-icon *= 'check'] path { fill-opacity: 1 i }
         /// Exit/Report.
         &[data-icon = 'exit'],
