--- a/wa.user.styl
+++ b/wa.user.styl
@@ -387,8 +387,8 @@
             }
             /// Right -> Fix the width with three open panes.
             &.three > ._37f_5 { width: calc(100% + 1px) }
-            /// Left -> Add missing borders to some panes.
-            &.three ._2t4Ic { border-right: 1px solid bd }
+            /// HACK: Resolve pane gap/border glitches.
+            ._2rI9W { margin-right: -1px }
         }
     }
 
