left: fix hover bg for starred messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -927,7 +927,7 @@
                     c: 0 0 bd;
                 }
                 &::after { content: none }
-                &._1lakC, &._2nA3s, &._2V_Wj { c: 0 0 hl }
+                &._1lakC, &._2nA3s, &._2V_Wj { c: 0 0 #55555510 }
                 ._2V2qB, .jLybP::before { c: cm }
                 /// Reset tails.
                 .tail {
