--- a/wa.user.styl
+++ b/wa.user.styl
@@ -608,6 +608,11 @@
                 rad: r;
                 border: 1px solid bd;
             }
+            hr {
+                opacity: 1;
+                border: none;
+                border-top: 1px solid bd;
+            }
             /// Contacts.
             > div[class]:nth-child(1) {
                 c: 0 0 hl;
@@ -616,6 +621,8 @@
                 /// Text.
                 .OEFaY { c: cm }
                 ._26-u- { c: fg }
+                /// Circle.
+                circle[r = '50'] { stroke: ac i }
             }
             > div[class]:nth-child(2) {
                 .ojaNO { c: cm }
