global: add borders to dropdown nib

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -449,7 +449,9 @@
             ._2lKjK { c: cm }
         }
         + [data-animate-dropdown-nib] {
-            c: 0 0 bd;
+            border-bottom: 1px solid bd;
+            border-right: 1px solid bd;
+            c: 0 0 bg;
             box-shadow: none;
         }
     }
