modals: fix bubble when replying to user's status

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -631,6 +631,8 @@
                 /// Reset the circle icon.
                 svg[width][height] path { v: t fg }
             }
+            /// Reply to the status.
+            /.QRsOy { c: 0 0 bg }
             /// Feat -> Fullscreen mode.
             if ( fullscreen == 1 ) {
                 rad: 0;
