chat: update the styles for system messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1086,9 +1086,9 @@
             font-weight: 600;
             text-shadow: none;
             c: fg 0 hl;
-            box-shadow: inner, inset 0 -3px bd;
+            box-shadow: bsh, inner, inset 0 -3px bd;
             &.S-bQb { c: orange }
-            &:not(.tail) { c: green }
+            &:not(.tail) { c: fg }
         }
         /// Chat -> Jump to new messages.
         ._3KRbU {
