chat: fix animation for selected search msg

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1286,7 +1286,7 @@
                 svg path[fill = '#DFE5E7'] { v: t }
             }
             /// Search -> Selected message.
-            > .velocity-animating * { c: ac }
+            &.velocity-animating { opacity: 0.4 }
             /// Images -> Timestamp.
             div[style *= 'width'][style *= 'height'] + div[class] {
                 padding: 2px 5px;
