right: fix msg info hover bg in direct messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1006,6 +1006,8 @@
             c: 0 0 t;
             box-shadow: 0 1px bd;
         }
+        /// HACK: Reset msg info hover in DMs but not in groups.
+        .rK2ei:not(._1c8mz):not(#z):not(#x) ._2UaNq:hover { c: 0 0 t }
         /// Read/Delivered section.
         ._2WP9Q { border: none }
         /// Search -> Default message.
