global: fix bg and icon opacity for active buttons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -327,7 +327,12 @@
         ._15wNI { c: 0 ac ac }
 
         /// Global -> Active buttons.
-        ._3j8Pd { &.GPmgF, &.GPmgf { c: 0 0 hl }}
+        ._3j8Pd {
+            &.GPmgF, &.GPmgf {
+                c: 0 0 bd;
+                [data-icon] path { fill-opacity: 1 i }
+            }
+        }
 
         /// Contacts/Search -> Loader.
         svg[width = '18'][height = '18'],
