--- a/wa.user.styl
+++ b/wa.user.styl
@@ -563,7 +563,8 @@
                 box-shadow: bsh;
             }
             /// Footer.
-            ._22aOT {
+            ._2HyTU, ._22aOT {
+                min-height: 91px; /// NOTE: Border is hidden on default 90px.
                 c: 0 0 hl;
                 box-shadow: inset 0 1px bd;
             }
