chat: fix background for attach dropdown menu

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -745,6 +745,7 @@
                 top: -10px;
                 padding: 10px;
                 rad: 0 0 r r;
+                c: 0 0 hl;
                 .Ijb1Q::after { box-shadow: 0 4px 8px sh }
             }
             /// Emojis -> Race selection.
