chat: fix deleted message color in groups

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1164,7 +1164,7 @@
                 div > div:nth-child(3) span { c: fg }
             }
             /// Deleted message.
-            ._3uHCS {
+            ._2v02G, ._3uHCS {
                 c: cm;
                 [data-icon] path { fill: cm }
             }
