chat: fix border radius for reply content section

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1527,7 +1527,7 @@
                 /.quoted-mention { c: cm }
                 /// Add border around wrapper.
                 /._1SsXF, ._3LVMN {
-                    rad: 7.5px;
+                    rad: 0 7.5px 7.5px 0;
                     box-shadow: inset 0 0 0 1px bd;
                 }
             }
