global: fix placeholder text color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -178,7 +178,7 @@
         scrollbar-color: ac #5552;
 
         /// Text.
-        ::placeholder { c: cm }
+        ::placeholder, ._2kE6F { c: cm }
         a { color: ac }
         strong { c: fg }
         select {
