feat: update main colors for old color-scheme

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -71,7 +71,7 @@
 @var color cyan    'Color: Cyan                 ' #5e8d87
 @var color green   'Color: Green                ' #7b823a
 @var color white   'Color: White                ' #ffffff
-@var color shadow  'Color: Shadow               ' #00000030
+@var color shadow  'Color: Shadow               ' #00000025
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
@@ -87,10 +87,10 @@
             --shadow    : shadow;
         } else {
             --dark      : #1f232a;
-            --darken    : #222730;
-            --darker    : #272c35;
+            --darken    : #252A33;
+            --darker    : #2c313a;
             --light     : #e9e9e9;
-            --lighter   : #c1c1c1;
+            --lighter   : #a1a1a1;
             --accent    : accent;
             --shadow    : shadow;
         }
