--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -1,9 +1,9 @@
 /* ==UserStyle==
 @name         WhatsApp by Mew
 @description  A customizable theme for WhatsApp.
-@namespace    github.com/vednoc/onyx
-@homepageURL  https://github.com/vednoc/onyx
-@supportURL   https://github.com/vednoc/onyx/issues
+@namespace    github.com/vednoc/dark-whatsapp
+@homepageURL  https://github.com/vednoc/dark-whatsapp
+@supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/WhatsApp.user.css
 @version      1.6.3
 @author       vednoc
@@ -239,12 +239,12 @@
     --mgreen: /*[[mgreen]]*/;
     --mblue: /*[[mblue]]*/;
     --hover-delay: /*[[hoverDelay]]*/;
-    --image: url(https://raw.githubusercontent.com/vednoc/onyx/master/images/background.jpg);
+    --image: url("https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/images/background.jpg");
     --emojiOpacity: /*[[emojiOpacity]]*/;
     --ui-font: /*[[customFonts]]*/ sans-serif;
     --version: "WhatsApp by Mew v1.6.3";
     --message: "Updated on 1st of December. Repository name will be changed from `onyx` to `dark-whatsapp` exactly in a week, so I'm updating UpdateURL beforehand. Manual reinstall might be required. ";
-    --changes: "See the changelog at: https://github.com/vednoc/onyx/releases";
+    --changes: "See the changelog at: https://github.com/vednoc/dark-whatsapp/releases";
   }
 
   /* Body reset. */
