--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/WhatsApp.user.css
-@version      1.6.3
+@version      1.7.0
 @author       vednoc
 @license      MIT
 @preprocessor uso
@@ -242,8 +242,8 @@
     --image: url("https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/images/background.jpg");
     --emojiOpacity: /*[[emojiOpacity]]*/;
     --ui-font: /*[[customFonts]]*/ sans-serif;
-    --version: "WhatsApp by Mew v1.6.3";
-    --message: "Updated on 1st of December. Repository name will be changed from `onyx` to `dark-whatsapp` exactly in a week, so I'm updating UpdateURL beforehand. Manual reinstall might be required. ";
+    --version: "WhatsApp by Mew v1.7.0";
+    --message: "Updated on 13th of December. Repository name changed. ";
     --changes: "See the changelog at: https://github.com/vednoc/dark-whatsapp/releases";
   }
 
