meta: update all fields using old repo name

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1,9 +1,9 @@
 /* ==UserStyle==
 @name         Dark-WhatsApp
 @description  Dark and light, very customizable theme for WhatsApp.
-@namespace    github.com/vednoc/onyx
-@homepageURL  https://github.com/vednoc/onyx
-@supportURL   https://github.com/vednoc/onyx/issues
+@namespace    github.com/vednoc/dark-whatsapp
+@homepageURL  https://github.com/vednoc/dark-whatsapp
+@supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @version      1.9.9
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
@@ -126,7 +126,7 @@
 
         --version   : 'Dark-WhatsApp [Alpha] v1.9.9';
         --message   : 'WIP v2. ';
-        --changes   : 'See the PR at: https://github.com/vednoc/onyx/pull/38';
+        --changes   : 'See the PR at: https://github.com/vednoc/dark-whatsapp/pull/38';
     }
 
     // Use stylus-lang variables with CSS variables.
