global: improve styles for context meuns

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -742,8 +742,8 @@
         &[style ^= 'transform-origin:'] {
             border: 1px solid bd;
             rad: r;
-            c: 0 0 bg;
-            box-shadow: bsh;
+            c: 0 0 hl;
+            box-shadow: 0 4px 12px sh-h;
             li > div {
                 c: cm;
                 &:hover { c: fg 0 hl }
@@ -763,7 +763,7 @@
                     border-bottom: 1px solid bd;
                     border-right: 1px solid bd;
                     bottom: -8px;
-                    c: 0 0 bg;
+                    c: 0 0 hl;
                 }
             }
         }
