chore: fix name of the renamed shadow variable

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -86,7 +86,7 @@
             --light     : light;
             --lighter   : lighter;
             --accent    : accent;
-            --shadow    : shadow;
+            --shadow    : sh;
             --sh-h      : sh-h;
         } else {
             --dark      : #1f232a;
@@ -95,7 +95,7 @@
             --light     : #e9e9e9;
             --lighter   : #a1a1a1;
             --accent    : accent;
-            --shadow    : shadow;
+            --shadow    : sh;
             --sh-h      : sh-h;
         }
         --yellow    : yellow;
