chat: rewrite styles for attach dropdown menu

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -750,11 +750,10 @@
             }
             /// Chat -> Attach dropdown.
             &._1fRWV {
-                top: -10px;
-                padding: 10px;
-                rad: 0 0 r r;
-                c: 0 0 hl;
-                .Ijb1Q::after { box-shadow: 0 4px 8px sh }
+                c: 0 0 t;
+                border: none i;
+                box-shadow: none i;
+                .Ijb1Q::after { box-shadow: bsh }
             }
             /// Emojis -> Race selection.
             > ul._3z3lc {
