right: fix styles for selected media items

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -735,6 +735,11 @@
         &[data-icon = 'search'] {
             path[fill-opacity = '.3'] { fill-opacity: 0.55 }
         }
+        /// Right -> Selected media.
+        &[data-icon = 'checkbox-round-checked'] {
+            [fill = '#00BFA5'] { v: ac }
+            [fill = '#FFF'] { v: white }
+        }
     }
 
     // Global -> Context menu.
@@ -1064,6 +1069,8 @@
                 height: 1px;
                 c: 0 0 ac;
             }
+            /// Selected media.
+            /._2Ji5m { c: 0 hl }
         }
     }
 
