global: tweak border color for checkboxes

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -329,7 +329,7 @@
         span[title *= 'typing...'], ._2ZAIy { c: ac }
 
         /// Global -> Checkboxes.
-        ._1Zo-R { c: 0 bd hl }
+        ._1Zo-R { c: 0 cm hl }
         ._15wNI { c: 0 ac ac }
 
         /// Global -> Active buttons.
