chat: make shared contact's context menu shorter

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1329,6 +1329,8 @@
                     c: fg 0 bg;
                 }
             }
+            /// Fix context menu height for shared contacts.
+            ._2rg5w._3EQsG { height: 50px }
         }
         /// Left.
         &-in {
