--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1364,6 +1364,13 @@
                 &._2PpWQ > div[style *= 'opacity'] { c: 0 0 left }
                 /// Images.
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
+                /// Fix context menu for local RTL layouts.
+                /._38wik {
+                    .3EQsG:not(#z):not(#x):not(#y) {
+                        opacity: 1;
+                        background: linear-gradient(90deg, right 25%, t) i;
+                    }
+                }
             }
             /// Replies.
             ._2HTIU { c: 0 0 bg }
@@ -1395,6 +1402,12 @@
                 &._2PpWQ div[style *= 'opacity'] { c: 0 0 right }
                 /// Images.
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
+                /// Fix context menu for local RTL layouts.
+                /._38wik {
+                    .3EQsG:not(#z):not(#x):not(#y) {
+                        background: linear-gradient(90deg, left 25%, t) i;
+                    }
+                }
             }
             /// Replies.
             ._2HTIU { c: 0 0 bg }
