right: fix bg for checkbox button area in links

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1146,6 +1146,8 @@
                         c: 0 0 t;
                         &::before { c: 0 0 hl }
                     }
+                    /// Right -> Fix bg for checkbox button.
+                    &._21W00::before { c: 0 0 t }
                 }
                 /// Checkboxes.
                 ._15wNI {
