--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1050,8 +1050,8 @@
         }
         /// Media/Links/Docs -> Selected header.
         .yrOIH {
-            c: 0 0 bg;
-            box-shadow: 0 1px bd;
+            c: 0 0 hl;
+            box-shadow: inset 0 -1px bd;
             span { c: fg }
         }
         /// Media/Links/Docs -> Content.
