chat: fix context menu for msg with RTL content
Note to self: Refresh the page before pushing changes.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1367,12 +1367,7 @@
                 /// Images.
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
                 /// Fix context menu for local RTL layouts.
-                /._38wik {
-                    .3EQsG:not(#z):not(#x):not(#y) {
-                        opacity: 1;
-                        background: linear-gradient(90deg, right 25%, t) i;
-                    }
-                }
+                &._38wik._2Nkc4 { background: linear-gradient(270deg, t, left 80%) i }
             }
             /// Replies.
             ._2HTIU { c: 0 0 bg }
@@ -1405,11 +1400,7 @@
                 /// Images.
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
                 /// Fix context menu for local RTL layouts.
-                /._38wik {
-                    .3EQsG:not(#z):not(#x):not(#y) {
-                        background: linear-gradient(90deg, left 25%, t) i;
-                    }
-                }
+                &._38wik._3EQsG { background: linear-gradient(270deg, t, right 80%) i }
             }
             /// Replies.
             ._2HTIU { c: 0 0 bg }
