chat: tweak gradients for normal messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1359,9 +1359,7 @@
             /// Context menu.
             > div > span:last-child > div[style] {
                 /// Non-stickers.
-                &:not(._2PpWQ) {
-                    background: linear-gradient(90deg, t, left) i;
-                }
+                &:not(._2PpWQ) { background: linear-gradient(90deg, t, left 80%) i }
                 /// Stickers.
                 &._2PpWQ > div[style *= 'opacity'] { c: 0 0 left }
                 /// Images.
@@ -1392,9 +1390,7 @@
             /// Context menu.
             > div > span:last-child > div[style] {
                 /// Non-stickers.
-                &:not(._2PpWQ) {
-                    background: linear-gradient(90deg, t, right) i;
-                }
+                &:not(._2PpWQ) { background: linear-gradient(90deg, t, right 80%) i }
                 /// Stickers.
                 &._2PpWQ div[style *= 'opacity'] { c: 0 0 right }
                 /// Images.
