global: fix active items in some context menus

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -749,9 +749,12 @@
             rad: r;
             c: 0 0 hl;
             box-shadow: 0 4px 12px sh-h;
-            li > div {
-                c: cm;
-                &:hover { c: fg 0 hl }
+            li {
+                &._3VXiW { c: 0 0 bd }
+                > div {
+                    c: cm;
+                    &:hover { c: fg 0 bd }
+                }
             }
             /// Chat -> Attach dropdown.
             &._1fRWV {
