landing: fix a conflict with video being hidden

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -261,6 +261,8 @@
                 + ._310T_ {
                     c: 0 0 t;
                     img { opacity: 0.3 }
+                    /// Reset background on button container.
+                    [style *= 'opacity: 1'] { c: 0 0 t }
                 }
                 /// 'Keep me signed in' reported in #59.
                 ._152b1 {
