--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1017,6 +1017,7 @@
         ._3EN0l { padding: 14px 15px }
         .ujWpH { padding: 14px 15px }
         ._2nQ7u, ._1goQ0 { padding: 0 }
+        ._2nQ7u + div[class] > div { padding-top: 1px }
         ._2LSbZ._2j5ir { margin-bottom: unset }
         ._1tyVr {
             padding: 0 15px;
