right: add box-shadow to msg info reset in DMs

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1038,8 +1038,11 @@
             c: 0 0 t;
             box-shadow: 0 1px bd;
         }
-        /// HACK: Reset msg info hover in DMs but not in groups.
-        .rK2ei:not(._1c8mz):not(#z):not(#x) ._2UaNq:hover { c: 0 0 t }
+        /// HACK: Reset msg info in DMs but not in groups.
+        .rK2ei:not(._1c8mz):not(#z):not(#x) ._2UaNq:hover {
+            c: 0 0 t;
+            box-shadow: none i;
+        }
         /// Read/Delivered section.
         ._2WP9Q { border: none }
         /// Search -> Default message.
