global: tweak archived/admin badge colors

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -472,8 +472,8 @@
     }
 
     // Global -> Badges.
-    ._2WwbV { c: blue blue bg }
-    .FPZFa { c: green green bg }
+    ._2WwbV { c: blue blue hl }
+    .FPZFa { c: ac ac hl }
 
     /// Global -> Modals.
     .overlay {
