--- a/wa.user.styl
+++ b/wa.user.styl
@@ -752,7 +752,7 @@
             c: 0 0 hl;
             box-shadow: 0 4px 12px sh-h;
             li {
-                &._3VXiW { c: 0 0 bd }
+                &._3VXiW > div { c: 0 0 bd }
                 > div {
                     c: cm;
                     &:hover { c: fg 0 bd }
