left: fix text color in blocked contacts area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -604,7 +604,7 @@
             /.fwByR { c: ac }
         }
         /// Settings -> Help.
-        ._1wt6r { c: cm }
+        ._1wt6r, /.bHCVK { c: cm }
         ._3hnO5 { c: 0 ac }
         ._1T8rb { c: ac 0 t }
         /// Left -> Turn on desktop notifications.
