--- a/wa.user.styl
+++ b/wa.user.styl
@@ -388,15 +388,19 @@
                 rad: r;
                 box-shadow: bsh;
                 /// Feat -> Custom max-width.
-                width: calc(100% - 38px);
-                max-width: var(--app-width);
+                &, /._11ARv {
+                    width: calc(100% - 38px);
+                    max-width: var(--app-width);
+                }
                 /// Feat -> Fullscreen mode.
                 if ( fullscreen == 1 ) {
-                    rad: 0;
-                    top: unset;
-                    width: 100%;
-                    max-width: 100%;
-                    height: 100%;
+                    &, /._11ARv {
+                        rad: 0;
+                        top: unset;
+                        width: 100%;
+                        max-width: 100%;
+                        height: 100%;
+                    }
                 }
             }
             /// Right -> Fix the width with three open panes.
