left: fix colors for already blocked contact

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -916,6 +916,8 @@
                 /// Nick/info.
                 ._3H4MS { c: fg }
                 .xD91K { c: cm }
+                /// Already blocked.
+                &._30Q1W { .3H4MS:not(#z) { c: cm }}
             }
             /// Settings -> Options.
             ._26JG5 {
