chat: fix colors for audio length while recording

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1586,6 +1586,8 @@
             }
             ._3SW-z { c: cm }
         }
+        /// Audio msg length.
+        /._2NdXo { c: cm }
     }
 
     // Fix whitespace for message content/timestamp. @upstream
