left: remove border from first item in settings

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -918,6 +918,8 @@
                 .xD91K { c: cm }
                 /// Already blocked.
                 &._30Q1W { .3H4MS:not(#z) { c: cm }}
+                /// Settings -> Reset first list item.
+                &._3fAgu { border-top: none i }
             }
             /// Settings -> Options.
             ._26JG5 {
