chat: fix colors for played audio msg in info area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -717,6 +717,8 @@
             &:first-child { fill: bd }
             &:last-child { fill: ac }
         }
+        /// Message info -> Played audio message.
+        &[data-icon = 'status-ptt-blue'] path { fill: ac i }
         /// Message status.
         &[data-icon *= '-check'] path { v: cm }
         &[data-icon *= '-dblcheck'] path { v: cm }
