left: fix colors for disabled notifications

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -609,6 +609,8 @@
         ._1T8rb { c: ac 0 t }
         /// Left -> Turn on desktop notifications.
         .NWyjc.AZ3xD { margin: 16px }
+        /// Left -> Show previews for notifications.
+        /._2vOyW._26EsD .lz4Mo { c: fg }
     }
 
     // Global -> Status.
