Add GIFs Timestamp

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1362,6 +1362,12 @@
                 rad: 7.5px;
                 c: 0 0 hl;
             }
+            /// Gifs -> Timestamp.
+            div[style *= 'width'][style *= 'height'] + ._3hsuL {
+                padding: 2px 5px;
+                rad: 7.5px;
+                c: 0 0 hl;
+            }
             /// Videos -> Timestamp.
             .video-thumb {
                 ._3_IKd {
