left: fix audio icon color in message content area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -772,6 +772,8 @@
             [fill = '#00BFA5'] { v: ac }
             [fill = '#FFF'] { v: white }
         }
+        /// Contacts -> Audio message.
+        &[data-icon *= 'status-ptt-green'] > svg > path { fill: ac }
     }
 
     // Global -> Context menu.
