global: add bg size if using a custom bg image

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -396,6 +396,7 @@
                 height: unset; width: unset;
                 filter: b o i h;
                 background-image: var(--bg-image);
+                background-size: cover;
                 c: 0 0 hl;
             } else if ( app_image == default ) {
                 c: 0 0 hl;
