chat: fix context menu for messages with files

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1432,6 +1432,8 @@
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
                 /// Fix context menu for local RTL layouts.
                 &._38wik._2Nkc4 { background: linear-gradient(270deg, t, left 80%) i }
+                /// Fix context menu for messages with files.
+                /._15CAo._2Nkc4 { background: linear-gradient(90deg, t, left 80%) i }
             }
             /// Replies.
             ._2HTIU { c: 0 0 bg }
@@ -1463,6 +1465,8 @@
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
                 /// Fix context menu for local RTL layouts.
                 &._38wik._3EQsG { background: linear-gradient(270deg, t, right 80%) i }
+                /// Fix context menu for messages with files.
+                /._15CAo._2Nkc4 { background: linear-gradient(90deg, t, right 80%) i }
             }
             /// Replies.
             ._2HTIU { c: 0 0 bg }
