right: fix forwarded status in message info area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1096,6 +1096,11 @@
             c: 0 0 t;
             box-shadow: 0 1px bd;
         }
+        /// Message info -> Forwarded x time(s).
+        ._3XHR- {
+            c: fg bd t;
+            span { color: inherit }
+        }
         /// HACK: Reset msg info in DMs but not in groups.
         .rK2ei:not(._1c8mz):not(#z):not(#x) ._2UaNq:hover {
             c: 0 0 t;
