chore: switch to master branch for emoji images

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -469,7 +469,7 @@
         }
         /// Feat -> Transparent emoji images.
         if ( emoji_t == 1 ) {
-            images = 'https://raw.githubusercontent.com/vednoc/wae/dev'
+            images = 'https://raw.githubusercontent.com/vednoc/wae/master'
             /// Android emojis.
             for i in 0..101 {
                 &.wa.b{i} {
