global: reset audio level slider in media player

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -398,6 +398,14 @@
             }
             /// Progress bar.
             ._2bTRm ._2ZXtj { c: 0 0 ac }
+            /// Audio level.
+            /._3Nf6W {
+                c: 0 0 t;
+                + ::-moz-range {
+                    &-progress, &-thumb { c: 0 0 ac }
+                    &-track { height: 2px; c: 0 0 gray }
+                }
+            }
         }
     }
 
