chat: fix text color of video duration

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1411,6 +1411,8 @@
                     rad: 7.5px;
                     c: fg 0 bg;
                 }
+                /// Video duration.
+                /._2HHbr { c: cm }
             }
             /// Fix context menu height for shared contacts.
             ._2rg5w._3EQsG { height: 50px }
