--- a/wa.user.styl
+++ b/wa.user.styl
@@ -878,16 +878,17 @@
             }
         }
         /// Search.
+        ._2HS9r { background-color: hl }
+            
         /div[class *= 'ZP8RM'] {
             border-bottom: 1px solid bd;
-            c: 0 0 hl;
-            &._19OGD { c: 0 0 hl }
+            c: 0 0 t;
+            &._19OGD { c: 0 0 bd }
             &::after { content: none }
-            > div { c: cm }
-            > div + label {
+            >  div + label {
                 c: 0 0 bd;
                 input { c: fg 0 t }
-                &:focus-within{ c: 0 0 t; }
+                &:focus-within { c: 0 0 t; }
             }
         }
         /// Contacts.
