global: small tweaks for search area styles

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -878,18 +878,20 @@
             }
         }
         /// Search.
-        ._2HS9r { background-color: hl }
-            
         /div[class *= 'ZP8RM'] {
-            border-bottom: 1px solid bg;
-            c: 0 0 t;
+            transition: 0.2s ease;
+            border-bottom: 1px solid bd;
+            c: 0 0 hl;
             &._19OGD { c: 0 0 bg }
             &::after { content: none }
-            >  div + label {
+            > div + label {
+                rad: radius-i i;
                 c: 0 0 bg;
                 input { c: fg 0 t }
-                &:focus-within { c: 0 0 t; }
+                &:focus-within { c: 0 0 t }
             }
+            /// Remove wrapper background.
+            /._2HS9r { c: 0 0 t }
         }
         /// Contacts.
         #pane-side {
