chat: tweak bg for context menu in embedded links

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1473,6 +1473,8 @@
                     height: 23px;
                     background: linear-gradient(90deg, t, left 80%) i;
                 }
+                /// Embedded links.
+                &._15CAo._3WZEQ { background: none i }
             }
             /// Replies.
             ._2HTIU { c: 0 0 bg }
@@ -1513,6 +1515,8 @@
                     height: 23px;
                     background: linear-gradient(90deg, t, right 80%) i;
                 }
+                /// Embedded links.
+                &._15CAo._3WZEQ { background: none i }
             }
             /// Replies.
             ._2HTIU { c: 0 0 bg }
