global: fix box shadow for media player

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -405,6 +405,8 @@
                     &-track { height: 2px; c: 0 0 gray }
                 }
             }
+            /// Fix box shadow.
+            /._1p-0O { box-shadow: 0 4px 12px 2px sh-h i }
         }
     }
 
