chat: fixed documents background
fixed documents background for both message-in & message-out

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1319,7 +1319,7 @@
         }
         /// Chat -> Documents.
         /._1mrMQ {
-            c: 0 0 bg;
+            c: 0 0 bd;
             /// Stats.
             /._1o0MN { c: cm }
         }
