chat: fixed background for links' embeds

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1323,9 +1323,9 @@
             /// Stats.
             /._1o0MN { c: cm }
         }
-        /// Embeds -> Background.
+        /// Chat -> Links (Embeds) -> Background.
         /.HNuTV, /._3qblR, /._1SsXF {
-            c: 0 0 bg;
+            c: 0 0 hl;
         }
         /// Embeds -> Thumbnail.
         /._3_nIn { c: 0 0 #55555510 }
