left: add wrapper background for left pane
This makes the left pane and chat header/footer have the same colors if
you use transparent colors in custom color option.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -854,6 +854,7 @@
 
     // App -> Left.
     #side {
+        c: 0 0 bg;
         > header {
             border-bottom: 1px solid bd;
             c: 0 0 hl;
