chat: fix emoji picker in upload preview pane

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1590,10 +1590,17 @@
             }
         }
         /// Emoji picker.
-        ._2mlOb {
+        /._2mlOb {
             c: 0 bd hl;
-            box-shadow: inset 0 1px bd;
+            box-shadow: inset 0 1px bd i;
             &::before { content: none }
+            /// Upload preview emoji picker.
+            &.aWTXv {
+                margin-bottom: 8px;
+                border: 1px solid bd i;
+                rad: r i;
+                box-shadow: bsh i;
+            }
         }
         /// Input area.
         > div:first-child {
