chat: fix bg for attach dropdown menu items

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -837,6 +837,7 @@
                 c: 0 0 t;
                 border: none i;
                 box-shadow: none i;
+                li { c: 0 0 t }
                 .Ijb1Q::after { box-shadow: bsh }
             }
             /// Emojis -> Race selection.
