global: lower margin equals for the intro

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -350,6 +350,11 @@
             /// Platform-specific section border..
             ._3ZVgT { c: 0 0 bd }
         }
+        
+        /// Intro bottom gap
+        .aheht {
+            margin-top: 16px !important;
+        }
 
         /// Left -> Typing indicator.
         span[title *= 'typing...'], ._2ZAIy { c: ac }
