chat: group description style
updated to match the new web version update which includes group description.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1201,6 +1201,20 @@
             /// Muted color for group members.
             > div:nth-child(2) > div:nth-child(2) span[title] { c: cm }
         }
+        /// Group -> description.
+        ._3SYkD {
+            > div {
+                border-bottom: 1px solid bd;
+                border-left: 1px solid bd;
+                background-color: hl;
+            }
+            ._6xQdq, ._3GIEC {
+                c: fg;
+            }
+            ._3D8gv {
+                c: cm;
+            }
+        }
         /// Chat -> Loader.
         ._2sOZc {
             c: 0 0 hl;
